# sha256

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  notes_operations
inc/: MessageBlock.hpp  sha.h  sha256.h  sha256.hpp  sha256_dev.h  sha_operations.h  sha_operations.hpp
infodump/: RFC_notes.md  notes_CMake.md  notes_RFC.md  show_bits.c  test_BSIG.cpp
infodump/understanding/: test_BSIG0.cpp  test_BSIG1.cpp  test_SSIG0.cpp  test_SSIG1.cpp
infodump/understanding/MessageBlock/: intro.cpp
infodump/understanding/Operators/: BSIG0.cpp
make/: definitions.mk  unit_test.mk
src/: MessageBlock.cpp  main.c  main.cpp  operations.c  preprocessor.cpp  sha256.c  sha256.cpp
test/: CMakeLists.txt  sha256_defines_test.cpp  sha256_operations_test.cpp  sha256_options_test.cpp  sha256_preprocessor_test.cpp  sha256_test_defines.cpp  sha256_test_messageblock.cpp
test/unit/: t_operations.cpp
